login almost ready

--- a/assets/scss/helpers.scss
+++ b/assets/scss/helpers.scss
@@ -26,14 +26,16 @@ $icons: (
 
 
 // colors
-$sea-blue: #469da7;
-$sky-blue: #62acb4;
-$heaven-blue: #97d1d7;
-$hole-black: #36393a;
-$lighthole-gray: #d7d7d7;
-$hell-black: #0a040a;
+$deep-orange: #e46917;
+$sand-gray: #828282;
+$hell-dark: #585858;
+$middle-gray: #6f6f6f;
+$light-gray: #e2e2e4;
+$almost-white: #dcdcdc;
+$sky-blue: #0c7cab;
+$water-blue: #2b8ab2;
+$spring-green: #00cb34;
 $pure-white: #ffffff;
-$rose-red: #e30613;
  
 
 // 2. Placeholders
