--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,7 +7,7 @@
 // 10. Animations
 =====================
 */
-h2, label, select, .header__phone, .button, .img--wrapper::before {
+h2, label, .header__phone, .button, .img--wrapper::before {
   text-transform: uppercase;
 }
 
@@ -74,6 +74,7 @@ html {
   color: #ffffff;
   user-select: none;
   width: 100%;
+  overflow-x: hidden;
 }
 
 body {
@@ -176,10 +177,14 @@ footer {
   margin-right: 10px;
 }
 
+.header__logo2 {
+  padding-left: 130px;
+}
+
 .header__phone {
   color: #585858;
-  font-size: 3rem;
-  line-height: 22px;
+  font-size: 1.9rem;
+  line-height: 11px;
   font-family: "Lato Heavy";
   font-weight: 800;
   margin: 20px 0 10px 0;
@@ -191,7 +196,7 @@ footer {
   }
 }
 
-@media screen and (min-width: 912px) {
+@media screen and (min-width: 1100px) {
   .header__phone {
     font-size: 3.6rem;
   }
@@ -203,7 +208,7 @@ footer {
   max-width: 870px;
   width: 100%;
   border-radius: 6px;
-  padding: 57px 45px 40px 45px;
+  padding: 57px 10px 40px 10px;
 }
 
 @media screen and (min-width: 993px) {
@@ -214,7 +219,6 @@ footer {
 
 .main__registration {
   min-height: 475px;
-  min-width: 350px;
   width: 100%;
   border-radius: 6px;
   border: 1px solid #dcdcdc;
@@ -301,16 +305,28 @@ footer {
 }
 
 .font--middle {
-  font-size: 2.4rem;
+  font-size: 1.3rem;
   font-weight: 400;
   font-family: "Lato Regular";
 }
 
+@media screen and (min-width: 1100px) {
+  .font--middle {
+    font-size: 2.4rem;
+  }
+}
+
 .font--small {
-  font-size: 1.3rem;
+  font-size: 1rem;
   font-weight: 400;
   font-family: "Lato Regular";
   text-transform: initial;
+}
+
+@media screen and (min-width: 1100px) {
+  .font--small {
+    font-size: 1.3rem;
+  }
 }
 
 .font--bold {
@@ -321,6 +337,7 @@ footer {
 
 .button--success {
   background-color: #00cb34;
+  margin-left: auto;
 }
 
 .button--info {
@@ -372,9 +389,33 @@ footer {
   padding: 55px 0 40px 0;
 }
 
+.form--p {
+  color: #ffffff;
+  font-size: 1.6rem;
+  line-height: 20.57px;
+  text-decoration: underline;
+  display: inline-block;
+  margin: 0 0 5px 0;
+  letter-spacing: 0.31px;
+  display: block;
+}
+
+@media screen and (min-width: 1290px) {
+  .form--p {
+    margin-right: 60px;
+    display: inline-block;
+  }
+}
+
 .footer--p {
-  font-size: 1.3rem;
-  line-height: 22px;
+  font-size: 1rem;
+}
+
+@media screen and (min-width: 500px) {
+  .footer--p {
+    font-size: 1.3rem;
+    line-height: 22px;
+  }
 }
 
 .img--wrapper::before {
@@ -383,7 +424,7 @@ footer {
   font-size: 1.2rem;
   line-height: 15.89px;
   bottom: -3px;
-  left: -90px;
+  left: 30px;
   z-index: 2;
 }
 
