--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -43,6 +43,7 @@ html {
     color: $pure-white;
     user-select: none;
     width: 100%;
+    overflow-x: hidden;
 }
 
 body {
@@ -119,7 +120,6 @@ input[type="password"] {
 select {
     max-width: 725px;
     font-weight: 600;
-    @extend %to-uppercase;
 }
 
 // 3. Layout
@@ -148,10 +148,14 @@ footer {
     margin-right: 10px
 }
 
+.header__logo2 {
+    padding-left: 130px;
+}
+
 .header__phone {
     color: $hell-dark;
-    font-size: 3rem;
-    line-height: 22px;
+    font-size: 1.9rem;
+    line-height: 11px;
     @extend %to-uppercase;
     font-family: "Lato Heavy";
     font-weight: 800;
@@ -159,7 +163,7 @@ footer {
     @media screen and (min-width: 768px){
         margin: 0 0 0 0;
     }
-    @media screen and (min-width: 912px) {
+    @media screen and (min-width: 1100px) {
         font-size: 3.6rem;
     }
 }
@@ -170,7 +174,7 @@ footer {
     max-width: 870px;
     width: 100%;
     border-radius: 6px;
-    padding:  57px 45px 40px 45px;
+    padding:  57px 10px 40px 10px;
     @media screen and (min-width: 993px){
         padding:  57px 100px 40px 45px;
     }
@@ -178,7 +182,6 @@ footer {
 
 .main__registration {
     min-height: 475px;
-    min-width: 350px;
     width: 100%;
     border-radius: 6px;
     border: 1px solid $almost-white;   
@@ -257,16 +260,22 @@ footer {
     text-align: right;
 }
 .font--middle {
-    font-size: 2.4rem;
-    font-weight: 400;
-    font-family: "Lato Regular";
-}
-
-.font--small {
     font-size: 1.3rem;
     font-weight: 400;
     font-family: "Lato Regular";
+    @media screen and (min-width: 1100px) {
+        font-size: 2.4rem;
+    }
+}
+
+.font--small {
+    font-size: 1rem;
+    font-weight: 400;
+    font-family: "Lato Regular";
     text-transform: initial;
+    @media screen and (min-width: 1100px) {
+        font-size: 1.3rem;
+    }
 }
 
 .font--bold {
@@ -283,6 +292,7 @@ footer {
 
 .button--success {
     background-color: $spring-green;
+    margin-left: auto;
     @extend %transition;
     @extend %pointer;
 }
@@ -333,9 +343,27 @@ letter-spacing: 0.6px;
     padding: 55px 0 40px 0;  
 }
 
+.form--p {
+    color: $pure-white;
+    font-size: 1.6rem;
+    line-height: 20.57px;
+    text-decoration: underline;
+    display: inline-block;
+    margin: 0 0 5px 0;
+    letter-spacing: 0.31px;   
+    display: block;
+    @media screen and (min-width: 1290px){
+        margin-right: 60px;
+        display: inline-block;
+    }
+}
+
 .footer--p {
+    font-size: 1rem;
+@media screen and (min-width: 500px){
     font-size: 1.3rem;
-    line-height: 22px;    
+    line-height: 22px;  
+}  
 }
 
 .img--wrapper {
@@ -350,7 +378,7 @@ letter-spacing: 0.6px;
     @extend %to-uppercase;
     @extend %absolute;
     bottom: -3px;
-    left: -90px;
+    left: 30px;
     z-index: 2;
 }
 
