--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -199,6 +199,7 @@ footer::after {
     padding:  57px 10px 40px 10px;
     @media screen and (min-width: 993px){
         padding:  57px 100px 40px 45px;
+        margin-right: 10px;
     }
 }
 
