--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -232,6 +232,7 @@ footer::after {
 @media screen and (min-width: 993px) {
   .main__form {
     padding: 57px 100px 40px 45px;
+    margin-right: 10px;
   }
 }
 
