--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -40,7 +40,7 @@
 html {
     @include font(normal, normal, 400, 62.5%, normal, "Lato Regular");
     font-size: 62.5%;
-    color: $pure-white;
+    background: $pure-white;
     user-select: none;
     width: 100%;
     overflow-x: hidden;
@@ -140,9 +140,23 @@ header::after {
     height: 1px;
 }
 
+.terms {
+    max-width: 1311px;
+    padding: 57px 5% 85px 5%;
+    margin-bottom: 70px; 
+    width: 100%;
+    border-radius: 6px;
+    border: 1px solid $almost-white;
+    background-color: $pure-white;
+    @media screen and (min-width: 880px) {
+        padding: 57px 103px 85px 102px;
+    }
+}
+
 footer {
     padding: 61px 0 99px 0;  
     @extend %relative;
+    border-top: 1px solid $light-gray;
 }
 
 footer::after {
@@ -351,6 +365,24 @@ footer::after {
     color: $deep-orange;
 }
 
+.terms--h2 {
+    color: $deep-orange;
+    max-width: 341px;
+    width: 100%;
+    padding-bottom: 12px;
+    text-transform: initial;
+}
+
+.terms--h2:first-child {
+    border-bottom: 1px solid $almost-white;
+    @extend %to-uppercase;
+    margin-bottom: 50px;
+}
+
+.terms--h2:last-of-type {
+    margin-top: 60px;              
+}
+
 .info--h2 {
 line-height: 32px;
 letter-spacing: 0.6px;
@@ -393,6 +425,12 @@ letter-spacing: 0.6px;
     @media screen and (min-width: 1310px){
         margin: 0;
     }
+}
+
+.terms--p {
+    font-size: 1.4rem;
+    line-height: 24px; 
+    padding: 15px 0 15px 0;
 }
 
 .footer--p {
