Remind password ready

--- a/assets/scss/helpers.scss
+++ b/assets/scss/helpers.scss
@@ -31,6 +31,7 @@ $sand-gray: #828282;
 $hell-dark: #585858;
 $middle-gray: #6f6f6f;
 $light-gray: #e2e2e4;
+$cloud-gray: #d7d7d7;
 $almost-white: #dcdcdc;
 $sky-blue: #0c7cab;
 $water-blue: #2b8ab2;
