--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -168,6 +168,10 @@ header::after {
   height: 1px;
 }
 
+main {
+  min-height: calc(100vh - 253px - 188px);
+}
+
 .terms {
   max-width: 1311px;
   padding: 57px 5% 85px 5%;
@@ -181,6 +185,22 @@ header::after {
 @media screen and (min-width: 880px) {
   .terms {
     padding: 57px 103px 85px 102px;
+  }
+}
+
+.password-reminder {
+  max-width: 1311px;
+  width: 100%;
+  border-radius: 6px;
+  border: 1px solid #dcdcdc;
+  padding: 57px 5% 95px 5%;
+  margin-bottom: 58px;
+  background: #ffffff url("../img/shape-1.png") no-repeat bottom right;
+}
+
+@media screen and (min-width: 680px) {
+  .password-reminder {
+    padding: 57px 100px 95px 102px;
   }
 }
 
@@ -352,6 +372,15 @@ footer::after {
   }
 }
 
+.label--dark {
+  color: #585858;
+  font-size: 1.4rem;
+  font-weight: 700;
+  line-height: 22px;
+  text-transform: uppercase;
+  margin-bottom: 10px;
+}
+
 .button--wrapper {
   text-align: right;
   display: flex;
@@ -445,6 +474,15 @@ footer::after {
   }
 }
 
+.password-reminder--h2 {
+  max-width: 341px;
+  width: 100%;
+  color: #e46917;
+  border-bottom: 1px solid #dcdcdc;
+  padding-bottom: 12px;
+  margin-bottom: 32px;
+}
+
 .info--p {
   width: 100%;
   font-size: 1.4rem;
@@ -492,6 +530,12 @@ footer::after {
   padding: 15px 0 15px 0;
 }
 
+.password-reminder--p {
+  font-weight: 700;
+  line-height: 24px;
+  margin-bottom: 34px;
+}
+
 .footer--p {
   font-size: 1rem;
 }
@@ -523,6 +567,22 @@ footer::after {
 @media screen and (min-width: 955px) {
   .button--arrow {
     display: block;
+  }
+}
+
+form .input--light {
+  max-width: 726px;
+  width: 100%;
+  height: 60px;
+  border-radius: 6px;
+  border: 1px solid #d7d7d7;
+  background-color: #ffffff;
+  margin-right: 0;
+}
+
+@media screen and (min-width: 992px) {
+  form .input--light {
+    margin-right: 46px;
   }
 }
 
