--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -250,13 +250,14 @@ footer::after {
 
 @media screen and (min-width: 768px) {
   .header__phone {
-    margin: 0 0 0 0;
+    margin: 0 -5px 4px 0;
   }
 }
 
 @media screen and (min-width: 1100px) {
   .header__phone {
     font-size: 3.6rem;
+    margin: 16px -35px 5px 0;
   }
 }
 
