--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -220,10 +220,11 @@ footer::after {
     font-weight: 800;
     margin: 16px 0 10px 0;
     @media screen and (min-width: 768px){
-        margin: 0 0 0 0;
+        margin: 0 -5px 4px 0;
     }
     @media screen and (min-width: 1100px) {
         font-size: 3.6rem;
+        margin: 16px -35px 5px 0;
     }
 }
 
