--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -207,6 +207,10 @@ main {
   margin-bottom: 33px;
 }
 
+.register__details {
+  padding: 82px 0 0 56px;
+}
+
 footer {
   padding: 61px 0 99px 0;
   border-top: 1px solid #e2e2e4;
@@ -364,13 +368,13 @@ footer::after {
 }
 
 .register__details-list {
-  max-width: 382px;
   width: 100%;
   list-style: initial;
   list-style-position: inside;
   font-size: 1.4rem;
   font-weight: 400;
   line-height: 24px;
+  margin-bottom: 67px;
 }
 
 .row {
@@ -498,6 +502,8 @@ footer::after {
   line-height: 32px;
   text-transform: uppercase;
   letter-spacing: 0.6px;
+  padding-bottom: 34px;
+  margin-bottom: 26px;
 }
 
 .terms--h2 {
@@ -594,16 +600,8 @@ footer::after {
 .register-hint--p {
   line-height: 16px;
   font-size: 1.4rem;
-}
-
-.register__details--p {
-  line-height: 24px;
-  font-size: 1.4rem;
-  letter-spacing: 0.35px;
-}
-
-.register__details--p:first-child {
-  font-weight: 700;
+  padding: 0 0 30px 10px;
+  margin-top: -10px;
 }
 
 .register-hint--p::before {
@@ -612,8 +610,24 @@ footer::after {
   width: 18px;
   height: 18px;
   display: block;
-  top: 0;
+  top: 8px;
   left: -26px;
+}
+
+.register-hint--p:nth-of-type(2)::before {
+  top: 0;
+}
+
+.register__details--p {
+  line-height: 24px;
+  font-size: 1.4rem;
+  letter-spacing: 0.35px;
+  max-width: 384px;
+  width: 100%;
+}
+
+.register__details--p:first-child {
+  font-weight: 700;
 }
 
 .footer--p {
